--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,39 @@
-#Android generated
-bin
-gen
-lint.xml
+# built application files
+*.apk
+*.ap_
 
-#Eclipse
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+out/
+build/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
 .project
 .classpath
 .settings
-.checkstyle
+target/
+libs/
+classes/
+gen-external-apklibs/
+tmp/
 
-#Maven
-target
-release.properties
-pom.xml.*
+# IDEA Ignores
+*.iml
+*.ipr
+*.iws
+.idea/
+.gradle/
 
-#Other
-.DS_Store
+# MAC
+*.DS_Store
+
+*.orig
