--- a/linearlistview/deploy.gradle
+++ b/linearlistview/deploy.gradle
@@ -1,15 +1,20 @@
 apply plugin: 'maven'
 apply plugin: 'signing'
 
-version = "0.9.0-SNAPSHOT"
+version = "1.0.1"
+
+def isReleaseBuild() {
+    !version.contains("SNAPSHOT")
+}
 
 def sonatypeRepositoryUrl
-if (version.contains("SNAPSHOT")) {
-    println 'DEBUG BUILD'
-    sonatypeRepositoryUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
-} else {
-    println 'RELEASE BUILD'
+
+if (isReleaseBuild()) {
+    println "RELEASE BUILD $version"
     sonatypeRepositoryUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2/"
+} else {
+    println "DEBUG BUILD $version"
+    sonatypeRepositoryUrl = "https://oss.sonatype.org/content/repositories/snapshots/"
 }
 
 afterEvaluate { project ->
